security.tf
resource "aws_security_group" "myos" {
  name        ="local_instance"

  ingress {
      from_port=22
      to_port=22
      protocol="tcp"
      cidr_blocks=["0.0.0.0/0"]
      ipv6_cidr_blocks=["::/0"]
    }
  

  ingress {
      from_port=80
      to_port=80
      protocol="tcp"
      cidr_blocks=["0.0.0.0/0"]
      ipv6_cidr_blocks=["::/0"]
    }
  


  egress {
      from_port=0
      to_port=0
      protocol="-1"
      cidr_blocks=["0.0.0.0/0"]
      ipv6_cidr_blocks=["::/0"]
    }
}
